#	$Id$	

Changelog for HylaFAX

* improve NSF station ID detection (27 Sep 2005)
* session logging improvements (27 Sep 2005)
* add Retransmit-Ignore RTNHandlingMethod (27 Sep 2005)

Changelog for HylaFAX 4.2.2

* fix error of confirming an ECM block missing frames other
  than the last frame when a null block is received (16 Sep 2005)
* fix error of tiffcheck missing needed reformatting (17 Aug 2005)
* add workaround for a bug in recent versions of gawk (15 Aug 2005)
* fix send error causing ECM data to not get sent (15 Aug 2005)
* homogenize default user id for user files (9 Aug 2005)
* remove deprecated cuserid (8 Aug 2005)
* fix some problems with sender notifications (5 Aug 2005)
* fix problem with PAM authentication features (2 Aug 2005)
* fix potential hang on reading data from modem (30 Jul 2005)
* fix potential hang on detecting an ECM block end (29 Jul 2005)
* fix job batches to properly release modems (26 Jul 2005)
* fix build error with Mac OS X 10.4 (26 Jul 2005)
* fix sendfax crash with verbose output (25, 29 Jul 2005)
* fix a race with scheduled jobs to allow for coordinated
  batch sending (25 Jul, 10 Aug 2005)
* fix some error conditions with JBIG and JPEG reception (25 Jul 2005)
* improve probemodem results for some modems (16 Jul 2005)
* correct cover sheet page count for some PDFs (14 Jul 2005)
* fix job blocking (concurrent call) handling, especially
  as dealing with batches (13 Jul 2003)
* fix job modifications on batched, running jobs (13 Jul 2005)
* throttle faxq from running the scheduler more than once per
  second in order to keep faxq from eating up CPU (11, 21 Jul 2005)
* fix job preparation failures in batches from causing faxq list
  corruption which would trigger faxq failure and worse (11 Jul 2005)
* fix the abortion of the lead job in a batch from causing
  all other jobs in the batch to also abort (11, 15 Jul 2005)
* restrict MaxBatchJobs to 64 in order to prevent command-line