@@ -34,6 +34,7 @@ enum FaxSendStatus {
     send_done,			// completed successfully
     send_reformat,		// retry with reformatted documents
     send_v34fail,		// failed due to V.34-Fax trouble
+    send_v17fail,		// failed due to V.17-Fax trouble
     send_batchfail		// batch failure, retry
 };
 #define	send_ok	send_done
